[gd_scene load_steps=3 format=3 uid="uid://b1f8xxonklqdh"]

[ext_resource type="Script" path="res://templates/WorldTemplate4/assets/WorldMini.gd" id="1_3gv0n"]
[ext_resource type="Texture2D" uid="uid://bnrx1l8xxfqy8" path="res://templates/WorldTemplate4/assets/mailbox1.png" id="2_13a5c"]

[node name="WorldMini" type="Node2D"]
script = ExtResource("1_3gv0n")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 100.0
offset_bottom = 100.0

[node name="Mailbox1" type="Sprite2D" parent="."]
position = Vector2(68, 79)
scale = Vector2(0.359184, 0.359184)
texture = ExtResource("2_13a5c")

[node name="LabelTitle" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "WOrld?"

[node name="LabelTitle2" type="Label" parent="."]
offset_left = 27.0
offset_top = 72.0
offset_right = 84.0
offset_bottom = 96.0
theme_override_colors/font_color = Color(0.775063, 0.775063, 0.775063, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 17
text = "33-33"
horizontal_alignment = 1

[node name="ButtonEnterWorld" type="Button" parent="."]
offset_left = 35.0
offset_top = 30.0
offset_right = 93.0
offset_bottom = 61.0
text = "ENTER"

[connection signal="pressed" from="ButtonEnterWorld" to="." method="_on_button_enter_world_pressed"]
